# blinkid-c-sdk

./: BlinkIdDocumentFields.md  BlinkIdRecognizer.md  README.md  Release notes.md
docs/: _address_detailed_info_8h.html  _address_detailed_info_8h_source.html  _anonymization_mode_8h.html  _anonymization_mode_8h_source.html  _available_recognizers_8h.html  _available_recognizers_8h_source.html  _barcode_data_8h.html  _barcode_data_8h_source.html  _barcode_document_type_8h.html  _barcode_document_type_8h_source.html  _barcode_element_key_8h.html  _barcode_element_key_8h_source.html  _barcode_recognizer_8h.html  _barcode_recognizer_8h_source.html  _barcode_result_8h.html  _barcode_result_8h_source.html  _class_info_8h.html  _class_info_8h_source.html  _class_info_types_8h.html  _class_info_types_8h_source.html  _data_match_result_8h.html  _data_match_result_8h_source.html  _date_8h.html  _date_8h_source.html  _digital_signature_result_8h.html  _export_8h.html  (+161 more)
sample-apps/projects/Android/CameraSample/: CMakeLists.txt  build.gradle
sample-apps/projects/Android/CameraSample/src/androidTest/java/com/microblink/recognizerApi/: IdRecognizerTest.java
sample-apps/projects/Android/CameraSample/src/main/: AndroidManifest.xml
sample-apps/projects/Android/CameraSample/src/main/java/com/microblink/recognizerApi/: Camera1Activity.java  IdRecognizer.java
sample-apps/projects/Android/CameraSample/src/main/jni/: jni.c
sample-apps/projects/Android/CameraSample/src/main/res/layout/: activity_camera1.xml
sample-apps/projects/Android/CameraSample/src/main/res/values/: strings.xml
(+353 files in other folders)
